2002-10-24  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h: allow to specify explicetly on which symbol we
	  want to work.

	* pp/op_to_source_options.h:
	* pp/op_to_source_options.cpp:
	* pp/op_to_source.cpp: handle --include-symbol, for asm output only
	  output for symbols with samplels or selected symbols.

	* pp/oprofp.cpp:
	* pp/samplesc_ontainer.cpp: minor change to reflect op_bfd api change

2002-10-24  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c: revert 64 bit dcookie patch commited
	  accidentally with 2002-10-18 abi patch.

2002-10-21  Graydon Hoare  <graydon@redhat.com>

	* doc/oprofile.xml: Describe op_import and --enable-abi.

2002-10-20  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/Makefile.in:
	* pp/session.cpp:
	* pp/session.h:
	* pp/op_time_options.cpp:
	* pp/op_to_source.cpp:
	* pp/oprofpp.cpp:
	* doc/oprofile.1.in:
	* doc/oprofile.xml: handle --session options

2002-10-19  John Levon  <levon@movementarian.org>

	* configure.in: AC_HELP_STRING is too new for my autoconf
 
2002-10-18  Graydon Hoare  <graydon@redhat.com>

	* libabi/*: Add support for abi descriptions, for portability.
	* daemon/oprofiled.c:
	* dae/oprofiled.c: Emit abi description on startup.
	* configure.in: Add --enable-abi option.
	* make.common.in:
	* Makefile.in: Support building libabi/
 
2002-10-19  John Levon  <levon@movementarian.org>
 
	* utils/op_start_25: grep -o does not exist on any of
	  my systems - fix
 
2002-10-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: calculate symbol size after removing duplicate
	  symbol. Fix #625678

2002-10-19  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_to_source.cpp:
	* pp/op_to_source_options.cpp:
	* pp/op_to_source_options.h:
	* doc/oprofile.1.in:
	* doc/oprofile.xml:  allow to pass multiple options to objdump

	* pp/opp_symbol.h:
	* pp/samples_container.cpp: store symbol size in symbol_entry object.

2002-10-19  Philippe Elie  <phil.el@wanadoo.fr>
